--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 
 .container{
     text-align: center;
-    width: 100vh;
+    width: 50vh;
     margin: 5% auto;
     padding: 20px 30px 50px 30px;
     border-radius: 5px;
@@ -58,6 +58,7 @@ form input{
 
 .todo-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -86,6 +87,11 @@ form input{
     flex: 1;
 }
 
+.tache{
+    font-weight: 300;
+    text-decoration: underline;
+    margin: 1rem 0;
+}
 .trash-btn{
     color: red;
     border: none;
