--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body{
 .container{
     text-align: center;
     width: 80%;
-    margin-left:10%;
-    margin-right:10%;
+    margin:10%;
     border-radius: 5px;
     padding: 20px;
 }
@@ -77,7 +76,6 @@ form input{
 
 .todo {
     width: 80%;
-    background: white;
     margin: 10px auto;
     color: black;
     font-size: 1.5rem;
@@ -85,6 +83,7 @@ form input{
     justify-content: space-between;
     align-items: center;
     transition: all .8s ease;
+    background-color: white;
 }
 
 .todo li{
@@ -143,7 +142,7 @@ form input{
 }
 
 .fall{
-    transform: translateX(10rem) rotateZ(180deg);
+    transform: translateX(80rem) rotateZ(80deg);
     opacity: 0;
 }
 @media screen and (max-width:450px) {
